--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_66/javafx-src.zip"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_66/src.zip"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_66/src1.zip"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
